# FixedIncome2025

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  README.md  cnp.bat  copilot-instructions.md  pyproject.toml  requirements.txt
docs/slides/: 01_yc6.slides.html  02_overview.slides.html  02_rates.slides.html  03_ust.slides.html  04_duration.slides.html  05_interpolation.slides.html  06_delta.slides.html  07_midterm.slides.html  08_pca.slides.html  09_futures.slides.html  10_futures.slides.html  11_swaps.slides.html  11_yc6_sofr.slides.html  12_swaps.slides.html  12_yc_construction.slides.html  13_options.slides.html  14_options.slides.html  A_yc_construction.slides.html  B_finite_difference.slides.html  C_interview.slides.html  I_local_llm.slides.html  local_llm_slides.slides.html  scrap.slides.html  scratchpad.slides.html
docs/source/: .~08_pca.ipynb  01_yc6.ipynb  01_yc6.slides.html  02_overview.ipynb  02_overview.slides.html  02_rates.ipynb  03_ust.ipynb  04_duration.ipynb  05_interpolation.ipynb  06_delta.ipynb  07_midterm.ipynb  08_pca.ipynb  09_futures.ipynb  10_futures.ipynb  11_swaps.ipynb  11_yc6_sofr.ipynb  12_yc_construction.ipynb  13_options.ipynb  14_options.ipynb  A_yc_construction.ipynb  B_finite_difference.ipynb  C_interview.ipynb  D_project.ipynb  D_python_env.ipynb  E_fdm.ipynb  E_python_env.ipynb  F_fdm.ipynb  F_mpca.ipynb  G_mpca.ipynb  G_trapping_rain_water.ipynb  H_rates_vol_modeling_overview_nbsphinx.ipynb  I_local_llm.ipynb  Interview_Questions.ipynb  conf.py  index.rst  local_llm_slides.ipynb  scrap.ipynb  (+7 more)
fixedincome2025/: __init__.py
(+32 files in other folders)
